derive/tests/snapshots/foreign_key_and_referenced_by/Warehouse/get_warehouse_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Warehouse` from the `warehouse` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_warehouse_by_id<'a>(
        &'a self,
        id: impl Into<WarehouseId> + Clone,
    ) -> Result<Warehouse, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().warehouse().id().find(id.clone().into().value()) {
            Some(warehouse) => Ok(warehouse),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "warehouse".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Warehouse` from the `warehouse` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_warehouse_by_id<'a>(
        &'a self,
        id: impl Into<WarehouseId> + Clone,
    ) -> Result<Warehouse, crate::spacetimedsl::error::SpacetimeDSLError> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().warehouse().id().find(id.clone().into().value()) {
            Some(warehouse) => Ok(warehouse),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "warehouse".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
